sratom (0.6.17) unstable; urgency=medium

  * Add lint option with project metadata and code formatting tests
  * Enable clang nullability checks
  * Fix library current_version on MacOS

 -- David Robillard <d@drobilla.net>  Sun, 06 Oct 2024 17:37:06 +0000

sratom (0.6.16) stable; urgency=medium

  * Clean up code
  * Constrain relative URI references to the base URI
  * Fix dependencies in pkg-config file
  * Override pkg-config dependency within meson
  * Remove junk files from documentation install
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency

 -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:06:26 +0000

sratom (0.6.14) stable; urgency=medium

  * Add project metadata
  * Adopt REUSE machine-readable licensing standard

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:29:00 +0000

sratom (0.6.12) stable; urgency=medium

  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:13:03 +0000

sratom (0.6.10) stable; urgency=medium

  * Fix documentation installation directory
  * Fix potential blank node ID truncation

 -- David Robillard <d@drobilla.net>  Thu, 26 May 2022 23:27:00 +0000

sratom (0.6.8) stable; urgency=medium

  * Fix potential null pointer dereference

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:36:14 +0000

sratom (0.6.6) stable; urgency=medium

  * Fix various minor warnings and other code quality issues

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 15:18:12 +0000

sratom (0.6.4) stable; urgency=medium

  * Make sratom_free() safe to call on NULL
  * Various minor code cleanups

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:20:40 +0000

sratom (0.6.2) stable; urgency=medium

  * Various minor code cleanups

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 18:48:51 +0000

sratom (0.6.0) stable; urgency=medium

  * Add sratom_set_env() for setting prefixes
  * Fix padding of constructed vectors (thanks Hanspeter Portner)